--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TimeQuest</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data.min.js"></script>
-    <script src="script.js" defer></script> <!-- Sørg for at 'defer' er inkludert -->
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
@@ -85,7 +85,3 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 TimeQuest. All rights reserved.</p>
-    </footer>
-</body>
-</html>
