--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TimeQuest</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data.min.js"></script>
-    <script src="script.js" defer></script>
+    <script src="script.js" defer></script> <!-- Sørg for at 'defer' er inkludert -->
 </head>
 <body>
     <header>
@@ -85,3 +86,7 @@
     </main>
 
     <footer>
+        <p>&copy; 2025 TimeQuest. All rights reserved.</p>
+    </footer>
+</body>
+</html>
